--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 #端口
 server.port=8080
 
-#数据库相关配置
-spring.datasource.url=jdbc:mysql://192.168.1.108:3306/equ_rent?useUnicode=true&characterEncoding=utf-8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=111111
+#数据库配置(阿里云服务器)
+spring.datasource.url=jdbc:mysql://47.96.114.71:3306/equ_rent?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=pbw
+spring.datasource.password=pengbowen
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
 #jpa配置
 spring.jpa.hibernate.ddl-auto=update
