1.新增轮播图controller 2.整合swager-ui，接口文档生成 3.配置允许跨域访问

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <artifactId>springfox-swagger2</artifactId>
             <version>2.7.0</version>
         </dependency>
+        <!-- swagger-ui -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.7.0</version>
+        </dependency>
         <!--常用工具类-->
         <dependency>
             <groupId>cn.hutool</groupId>
