1.新增轮播图controller 2.整合swager-ui，接口文档生成 3.配置允许跨域访问

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.datasource.username=pbw
 spring.datasource.password=pengbowen
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+#不能小于30秒，否则默认回到1800秒
+spring.datasource.hikari.max-lifetime=30000 
+spring.datasource.hikari.connection-test-query=SELECT 1
 
 #jpa配置
 spring.jpa.hibernate.ddl-auto=update
