--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=pengbowen
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 #不能小于30秒，否则默认回到1800秒
-spring.datasource.hikari.max-lifetime=30000 
+#spring.datasource.hikari.max-lifetime=30000
 spring.datasource.hikari.connection-test-query=SELECT 1
 
 #jpa配置
