1.新增上传轮播图方法

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+#文件保存路径
+image.location.path=E:\\picture\\equ_rent\\
+#图片访问根路径
+image.root.path=http://localhost/
+
